Add some worked problems from Gurnett

--- a/content/notes/UWAA556/ch02-2.md
+++ b/content/notes/UWAA556/ch02-2.md
@@ -389,7 +389,7 @@ When we get a relationship between current and electric field, we've found a con
 {{< /katex >}}
 In a cold unmagnetized plasma, the conductivity is scalar and purely imaginary. From the definition of the general dielectric constant
 {{< katex display >}}
-\epsilon = \epsilon_0 i \frac{\hat\sigma}{\omega}
+\epsilon = \epsilon_0 + i \frac{\hat\sigma}{\omega}
 {{< /katex >}}
 {{< katex display >}}
 = \epsilon_0 \left( 1 + i ^2 \frac{\omega_p ^2}{\omega ^2} \right)
