--- a/content/notes/UWAA556/ch02-3.md
+++ b/content/notes/UWAA556/ch02-3.md
@@ -23,10 +23,20 @@ We define \\( \vec \omega_{c, \alpha} \\) to be the vector gyrofrequency
 \pdv{\vec v_{\alpha, 1}}{t} + \vec \omega_{c, \alpha} \cross \vec v_{\alpha, 1} = \frac{q_\alpha}{m_\alpha} \vec E_1
 {{< /katex >}}
 
+For a linear system like this, where \\( Av = F \\), in general the generic solutions are perturbations to the solutions of the homogeneous equation \\( Av = 0 \\). For example, if there is a basis of solutions \\( v_{0n} \\) to \\( Av = 0 \\), then the generic solution to \\( Av = F \\) will be
+
+{{< katex display >}}
+v = \sum _n c_n v_{0n} + v_F
+{{< /katex >}}
+
+where \\( v_F \\) satisfies the non-homogeneous equation \\( Av = F \\).
+
 Let's start with the homogeneous case, setting \\( \vec E_1 = 0 \\):
+
 {{< katex display >}}
 \pdv{\vec v_{\alpha, 1}}{t} = - \vec \omega_{c, \alpha } \cross \vec v_{\alpha, 1}
 {{< /katex >}}
+
 We already kind of know what the trajectories are going to be.  We expect to see helical motion due to the static magnetic field \\( \vec B_0 \\). But let's follow the full mathematical method to solve it because things will get more complicated when we include the electric field. For simplicity, we'll drop the \\( \alpha \\) subscripts from here on, but they're still implied. We can represent the cross product by means of a matrix operator \\( A \\):
 {{< katex display >}}
 A = \begin{bmatrix} 0 & \omega_z & - \omega_y \\ - \omega_z & 0 & \omega_x \\ \omega_y & - \omega_x & 0 \end{bmatrix} \qquad \vec \omega \cross \vec B = A \cdot \vec B
@@ -94,7 +104,7 @@ We can identify the \\( A/\omega \\) and \\( A^2 / \omega \\) terms, and we're l
 {{< /katex >}}
 Now we've got the solution we expected: a rotation about the \\( \hat b_0 \\) axis with frequency \\( \omega_c \\), where the parallel component of velocity is unaffected by the magnetic field.
 
-If we re-introduce the \\( \vec E_1 \\) forcing term, we make the inhomogeneous, perturbing the helical trajectory
+If we re-introduce the \\( \vec E_1 \\) forcing term, we perturb the helical trajectory
 {{< katex display >}}
 \pdv{\vec v}{t} = A \vec v + \vec E_1
 {{< /katex >}}
@@ -196,7 +206,7 @@ We define the convenience terms \\( P \\) and \\( N \\) to be
 P \equiv \frac{\omega}{\omega + \omega_c}
 {{< /katex >}}
 {{< katex display >}}
-N \equiv \frac{w}{\omega - \omega_c}
+N \equiv \frac{\omega}{\omega - \omega_c}
 {{< /katex >}}
 {{< katex display >}}
 \rightarrow Q(I - \frac{i}{\omega} \Lambda) ^{-1} Q^{-1} = \frac{1}{2} \begin{bmatrix}
@@ -221,18 +231,21 @@ i & 1 \\ -i & 1
 = \frac{i}{2 \omega} \begin{bmatrix} P + N & -i (P - N) \\ i (P - N) & P+N \end{bmatrix}
 {{< /katex >}}
 Note that
+
 {{< katex display >}}
 \frac{1}{2}(P + N) = \frac{\omega^2}{\omega^2 - \omega_c ^2}
 {{< /katex >}}
+
 {{< katex display >}}
 \frac{1}{2}(P - N) = \frac{- \omega \omega_c}{\omega^2 - \omega_c^2}
 {{< /katex >}}
+
 {{< katex display >}}
-\rightarrow \hat{\vec v_\alpha} = \frac{i}{\omega} \begin{bmatrix}
+\rightarrow \hat{\vec v}_\alpha = \frac{i}{\omega} \begin{bmatrix}
 \frac{\omega^2}{\omega^2 - \omega_{c, \alpha} ^2} & \frac{i \omega \omega_{c, \alpha}}{\omega^2 - \omega_{c, \alpha} ^2}  & 0 \\
 - \frac{i \omega \omega_{c, \alpha}}{\omega^2 - \omega_{c, \alpha} ^2} & \frac{\omega^2}{\omega^2 - \omega_{c, \alpha}^2} & 0 \\
 0 & 0 & 1
-\end{bmatrix} \frac{q_\alpha}{m_\alpha} \vec E
+\end{bmatrix} \frac{q_\alpha}{m_\alpha} \hat{\vec E}
 {{< /katex >}}
 
 ## Permittivity Tensor in Uniformly Magnetized Cold Plasma
@@ -245,6 +258,9 @@ So the conductivity tensor for a cold uniformly magnetized plasma is
 {{< katex display >}}
 \hat \sigma = \frac{i \epsilon_0}{\omega} \sum_\alpha \omega_{p, \alpha} ^2 R_\alpha
 {{< /katex >}}
+
+As a good check, we can compare this with the conductivity for the unmagnetized case. If \\( B_0 = 0 \\), then \\( R_\alpha \\) is just the identity matrix and we recover \\( \sigma = \frac{i \epsilon_0}{\omega} \omega_p ^2 \\).
+
 We can also get the dielectric and susceptibility tensors, so that we can write out the dispersion relation and start to analyze the different wave species allowed. From \\( \epsilon = \epsilon_0 + \frac{i}{\omega} \sigma \\) we get
 {{< katex display >}}
 \epsilon = \epsilon_{ij} = \epsilon_0 (I _{ij} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} R_{\alpha, ij})
@@ -303,7 +319,7 @@ Particles have very different responses based on their charge-to-mass ratio
 {{< katex display >}}
 \omega_{c, i} \ll \omega_{c, e}
 {{< /katex >}}
-Since the charge-to-mass ratio of the electron is 1836 times greater than that of fully ionized ions, the difference is significant.
+Since the charge-to-mass ratio of the electron is 1836 times greater than that of fully ionized ions, the difference is significant. In most cases, we'll get \\( \omega_{ci} \ll \omega \ll \omega_{ce} \\), where the ions are effectively unmagnetized and the electrons are magnetized.
 
 That's what the response looks like for a transverse linear polarized wave, leading to a twisting elliptical orbit. To get the dispersion relation, we start by writing the dielectric tensor \\( \epsilon / \epsilon_0 \\) in a more conventional format due to Stix:
 {{< katex display >}}
@@ -352,7 +368,7 @@ n_x = n \sin \theta \qquad n_z = n \cos \theta
 \rightarrow 0 = \begin{bmatrix}
 S - n^2 \cos ^2 \theta & -i D & n^2 \cos \theta \sin \theta \\
 i  D & S - n^2 & 0 \\
-n^2 \cos \theta \sin \theta & 0 & n_z ^2 - n^2
+n^2 \cos \theta \sin \theta & 0 & P - n^2 \sin ^2 \theta
 \end{bmatrix}
 \begin{bmatrix}
 \hat E_x \\
@@ -381,25 +397,29 @@ Because we're solving in terms of \\( n^2 \\), we will get a forward and backwar
 
 We have \\( n^2 = n^2 (\theta, \omega) \\). We can invert to get an expression for \\( \theta \\) in terms of \\( n^2 \\) and \\( \omega \\)
 {{< katex display >}}
-\tan ^2 \theta = - \frac{P (n^2 - R)(n^2 - L)}{Sn^2 - RL)(n^2 - P)}
+\tan ^2 \theta = - \frac{P (n^2 - R)(n^2 - L)}{(Sn^2 - RL)(n^2 - P)}
 {{< /katex >}}
 This is a pretty complicated expression with a lot of possible solution modes. Let's consider some special cases:
 
 ### Parallel Propagation
 
-\\( \theta = 0 \qquad \vec k \parallel \vec B_0 \\)
+{{< katex display >}}
+\theta = 0 \qquad \vec k \parallel \vec B_0
+{{< /katex >}}
 
 {{< katex display >}}
 \rightarrow P(n^2 - R)(n^2 - L) = 0
 {{< /katex >}}
 There are several solutions
-    - (1): \\( P = 0 = 1 - \frac{\omega_p^2}{\omega^2} \rightarrow \omega = \pm \omega_p \\) which is the ordinary plasma wave
-    - (2): \\( n^2 - R = 0 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega + \omega_{c, \alpha}} = 0 \\)
-    - (3): \\( n^2 - L = 0 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega - \omega_{c, \alpha}} = 0 \\)
+
+- (1): \\( P = 0 = 1 - \frac{\omega_p^2}{\omega^2} \rightarrow \omega = \pm \omega_p \\) which is the ordinary plasma wave
+- (2): \\( n^2 - R = 0 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega + \omega_{c, \alpha}} = 0 \\)
+- (3): \\( n^2 - L = 0 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega - \omega_{c, \alpha}} = 0 \\)
 
 For the \\( R \\) and \\( L \\) wave solutions, we can pick out a couple distinct pieces of the dispersion relation. The \\( 1 - \frac{c^2 k^2}{\omega^2} \\) piece is the free space response, and \\( \frac{\omega_{p, \alpha}^2}{\omega^2} \\) is the ordinary plasma oscillation. The \\( \frac{\omega}{\omega - \omega_{c, \alpha}} \\) term is a distortion of the ordinary plasma response, as the oscillation tries to move along the magnetic surface.
 
 We can identify these three cases as
+
 - (1): Static, non-thermal plasma waves
 - (2): Electromagnetic wave with right-handed polarization
 - (3): Electromagnetic wave with left-handed polarization
@@ -420,9 +440,9 @@ There are two types of solution for waves propagating perpendicular to the magne
 {{< katex display >}}
 \rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \frac{\omega_p ^2}{\omega^2} = 0
 {{< /katex >}}
-This is the ordinary wave, propagating perpendicular to the magnetic field (O-wave).
+This is the ordinary wave, propagating perpendicular to the magnetic field (O-wave). The refractive index does not depend on \\( B_0 \\) at all.
 2) \\( n^2 - \frac{RL}{S} = 0 \\)
-This is a much more complicated expression, leading us to the extraordinary wave (X-wave)
+This is a much more complicated expression, leading us to the extraordinary wave (X-wave). It has two different resonances.
 
 ## Cutoff and Resonance
 
@@ -434,6 +454,7 @@ Resonances in the dispersion relation occur for specific combinations of \\( \om
 {{< katex display >}}
 n^2 = \frac{c^2 k^2}{\omega^2} \sim (\frac{c}{v_{\text{phase}}})^2
 {{< /katex >}}
+
 
 ### Cut-off
 
@@ -466,6 +487,45 @@ Writing \\( n^2 = \frac{c^2}{v_{\text{phase}}^2} \\), we equivalently have reson
 In an inhomogeneous plasma, cutoffs are associated with a reflection of wave energy. The plasma density doesn't go immediately from vacuum to \\( n_p \\), there is a transition region. At some point, a wave going through transition may hit a density such that \\( n^2 < 0 \\) and the wave will be reflected at that point.
 
 At resonance, the wave is absorbed. There can also be a release of energy from the plasma, but for a thermal plasma we consider the wave energy to be absorbed by the plasma and not the other way around.
+
+What do resonances really mean in the context of the plasma dynamics? Let's look back at the momentum equation. From the electron momentum equation, we can write down
+{{< katex display >}}
+\dv{v_x}{t} = - \frac{e}{m_e} (E_x + v_y B_0)
+{{< /katex >}}
+{{< katex display >}}
+\dv{v_y}{t} = - \frac{e}{m_e} (E_y - v_x B_0)
+{{< /katex >}}
+for \\( \vec B_0 = B_0 \vu z \\), we can differentiate with respect to time and substitute to combine the two expressions and get
+{{< katex display >}}
+\pdv{^2 v_x}{t^2} + \omega_{ce}^2 V_x = - \frac{e}{m_e} (\pdv{E_x}{t} - \omega_{ce} E_y)
+{{< /katex >}}
+
+For the \\( R \\) wave, we have solutions like
+{{< katex display >}}
+E_x = E_0 \cos \omega_{ce} t \qquad E_y = E_0 \sin \omega_{ce} t
+{{< /katex >}}
+
+So the momentum equation is
+{{< katex display >}}
+\pdv{^2 v_x}{t^2} + \omega_{ce}^2 v_x = \frac{2 e E_0 \omega_{ce}}{m_e} \sin \omega_{ce} t
+{{< /katex >}}
+
+The left-hand-side is the equation for a harmonic oscillator, with a harmonic forcing term. In general, the solution for the simple harmonic motion is
+
+{{< katex display >}}
+v_x = v_0 \cos (\omega_{ce} t + \phi) + v_0 \sin (\omega_{ce} t + \phi)
+{{< /katex >}}
+
+If we include the forcing function, the solutions are
+{{< katex display >}}
+v_x = - \frac{E_0}{B_0} \omega_{ce} t \cos \omega_{ce} t
+{{< /katex >}}
+{{< katex display >}}
+v_y = - \frac{E_0}{B_0} \omega_{ce} t \sin \omega_{ce} t
+{{< /katex >}}
+
+It's easy to see what happens to solutions that are proportional to \\( t \\). As \\( t \rightarrow \infty \\), we get unrealistic results that must be accounted for by non-linearities or other physical constraints.
+
 
 ## Overdense and Underdense Plasmas
 
@@ -600,7 +660,7 @@ The limits for the L-wave are:
 
 Now, what about perpendicular propagation?
 
-**Ordinary Wave**
+### Ordinary Wave
 
 For \\( \theta = \pi / 2 \\), because \\( \vec E  \\) can be either parallel or perpendicular to the cyclotron orbits, we get hybrid oscillations. First, look at the ordinary plasma wave with \\( \vec E \\) linear polarized in the direction of \\( \vec B \\).
 {{< katex display >}}
@@ -608,9 +668,9 @@ n_O ^2 = 1 - \frac{\omega_p ^2}{\omega^2}
 {{< /katex >}}
 The resonance condition here is \\( v_\phi > c \\), which doesn't happen, so there aren't any resonances. The cut-off condition is the same \\( \omega_O = \omega_p \\) for the ordinary wave.
 
-**Extraordinary Wave**
+### Extraordinary Wave
 
-\\( \vec E  \\) could be perpendicular to the direction of the waves, or parallel. If polarized, needs to be rotating around \\( \vec k \\)
+\\( \vec E  \\) could be perpendicular to the direction of the waves, or parallel. If polarized, needs to be rotating around \\( \vec k \\). We can factor the dispersion relation for the X-wave like this:
 
 {{< katex display >}}
 n_X ^2 = \frac{RL}{S} = \frac{((\omega + \omega_{c, i})(\omega - \omega_{c, e})- \omega_p ^2)((\omega - \omega_{c, i})(\omega + \omega_{c, e}) - \omega_p ^2)}{(\omega ^2 - \omega_{c, i}^2)(\omega^2 - \omega_{c, e}^2) + \omega_p ^2(\omega_{c, e} \omega_{c, i} - \omega ^2)}
@@ -639,6 +699,25 @@ Approximating the exact solutions by disregarding terms that are small in the el
 
 The resonances of the X-wave are approximately at the norm (upper hybrid) and geometric mean (lower hybrid) of the electron frequencies.
 
+If we just look at the lower hybrid resonance, let's take a look at how the currents resulting from the wave flow:
+
+{{< katex display >}}
+S E_x - i D E_y = 0
+{{< /katex >}}
+
+For the lower-hybrid resonance, we get \\( E_y = 0 \\).
+
+From the conductivity tensor \\( \sigma \\), we can convince ourselves that \\( |\sigma_{xx}| \ll |\sigma_{xy}| \\), and
+
+{{< katex display >}}
+J_x = \sigma_{xx} E_x + \sigma_{xy} E_y \approx 0
+{{< /katex >}}
+{{< katex display >}}
+J_y = - \sigma_{xy}  E_x + \sigma_{xx} E_y \neq 0
+{{< /katex >}}
+
+Interestingly, the majority of the resulting current is in the \\( y \\) direction, but the electric field is in the \\( x \\) direction.
+
 - Cut-offs
 
 Cut-offs of the extraordinary wave correspond with roots of the numerator
@@ -651,7 +730,11 @@ Cut-offs of the extraordinary wave correspond with roots of the numerator
 - Low-frequency: \\( n_X = 1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2} \\)
 - High-frequency: \\( n_X^2 = 1 \\), same as the free-space wave, so the plasma is transparent.
 
-Back to the general case, the cut-offs occur when \\( PRL = 0 \\), and resonances occur at \\( \tan ^2 \theta = - \frac{P}{S} \\). Tracing out these surfaces in a CMA diagram, we get:
+Back to the general case, the cut-offs occur when \\( PRL = 0 \\), and resonances occur at \\( \tan ^2 \theta = - \frac{P}{S} \\).
+
+### CMA Diagram
+
+Tracing out all of the surfaces defined by our cut-offs and resonances in a CMA diagram, we get:
 
 <p align="center"> <img alt="cma-diagram.png" src="/r/img/556/cma-diagram.png" /> </p>
 
@@ -661,7 +744,7 @@ Each line is a cutoff or resonance, except the line at \\( RL = PS \\) where the
 - If there is a resonance \\( n \rightarrow \infty \\) inside a bounded volume, then everywhere else in that bounded volume there exist resonance angles \\( \theta \\) corresponding to the same resonance. That is because \\( P / S \\) can not change sign within a bounded volume.
 - For any angle \\( \theta \\) where \\( n \neq 0 \\) or \\( \infty \\), then only one branch will be either real or imaginary. There is no transition from cut-off to not-cut-off
 - The wave normal surface is symmetric about the magnetic axis and \\( \theta = \pi/2 \\)
-- Classes of solutions can only conincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\)
+- Classes of solutions can only coincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\)
 
 There are three topological possibilities for wave-normal surfaces in the CMA diagram.
 
