Formatting and content updates. Enable table of contents on many pages.

--- a/content/notes/UWAA556/ch02-1.md
+++ b/content/notes/UWAA556/ch02-1.md
@@ -1,7 +1,7 @@
 ---
 title: Plasma Waves in General Dielectric Media
 weight: 20
-bookToc: false
+# bookToc: false
 ---
 
 
@@ -48,7 +48,7 @@ and we say that the free charge density \\( \rho_c \\) is the source of the elec
 
 The polarization density has different units than the electric field, so we don't need the \\( \epsilon_0 \\), and we also have a minus sign because the polarization field points opposite the charge displacement.
 
-- **Displacement Field**
+### Displacement Field
 
 We can now define the Displacement Field (the "D" field). We break the total charge density into free charges \\( \rho_f \\) and bound charges \\( \rho_b \\)
 
@@ -69,7 +69,7 @@ We define the displacement field \\( \vec D \\) to be
 \vec D = \epsilon_0 \vec E + \vec P \rightarrow \div \vec D = \rho_f
 {{< /katex >}}
 
-- **Constitutive Relations**
+### Constitutive Relations
 
 If we have no external electric field applied to some material, there will be zero polarization field, and if we apply an external field we will see some non-zero polarization. A constitutive relation gives the relationship between these two fields.
 
@@ -420,9 +420,9 @@ i \vec k \cdot (\hat \sigma - i \omega \hat \epsilon_b ) \hat \vec E = 0
 - i \omega(i \vec k \cdot(\hat \epsilon_b - \frac{\hat \sigma}{i \omega}) \hat \vec E) = 0
 {{< /katex >}}
 
-If we define our new \\( \hat \vec D' \\) as
+If we define our new \\( \hat \vec D ^\prime \\) as
 {{< katex display >}}
-\hat \vec D' = \left( \hat \epsilon_b - \frac{\hat \sigma}{i \omega} \right) \hat \vec E
+\hat \vec D^\prime = \left( \hat \epsilon_b - \frac{\hat \sigma}{i \omega} \right) \hat \vec E
 {{< /katex >}}
 then
 {{< katex display >}}
@@ -438,7 +438,7 @@ So, when we move from a field \\( \vec D \\) which is not divergence-free to \\(
 {{< /katex >}}
 This is sometimes called the **effective dielectric constant**.
 
-Looking back at what we've actually done when transforming to this new \\( \vec D' \\) view,
+Looking back at what we've actually done when transforming to this new \\( \vec D^\prime \\) view,
 - \\( \div \vec D = 0 \\) is the basic assumption. This is essentially the same as transforming into a system in which there are no free charges.
 - If the polarization is happening such that the imaginary part of \\( \hat \epsilon_b \\) is zero, that implies that \\( \text{Im}(\hat \epsilon) = \hat \sigma / \omega \\)
 
