--- a/content/notes/UWAA556/ch02-3.md
+++ b/content/notes/UWAA556/ch02-3.md
@@ -1,7 +1,7 @@
 ---
-title: Cold Magnetized Plasma Waves
+title: Cold Magnetized Plasma Dispersion Relation
 weight: 30
-bookToc: false
+# bookToc: false
 ---
 
 
@@ -9,7 +9,7 @@ bookToc: false
 
 {{< /katex >}}
 
-# Cold Magnetized Plasma Waves (CMPW)
+# Cold Magnetized Plasma Dispersion Relation
 
 Now that we have a pretty good handle on the unmagnetized case, let's include the background magnetic field \\( \vec B_0 \\) in the linearized equation of motion
 {{< katex display >}}
