--- a/content/notes/problems/gurnett/ch02.md
+++ b/content/notes/problems/gurnett/ch02.md
@@ -1,5 +1,5 @@
 ---
-title: Gurnett and Battacharjee - Chapter 2
+title: Characteristic Parameters of a Plasma
 weight: 40
 bookToc: false
 ---
@@ -7,6 +7,8 @@ bookToc: false
 {{< katex display >}}
 
 {{< /katex >}}
+
+Problems from chapter 2 of Gurnett and Battacharjee - Introduction to Plasma Physics
 
 ### 2.1
 
