--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -1,18 +1,20 @@
 ---
 title: Mathematical review
 weight: 10
-bookToc: false
+# bookToc: false
 ---
 
 {{< katex display >}}
 
 {{< /katex >}}
 
-## Mathematical review
+# Mathematical review
 
 We're starting off with some mathematical foundation to ensure we're all on the same page before we start talking about waves and collisions.
 
-### Fourier Series / Spectral Analysis
+## Fourier Series / Spectral Analysis
+
+<p align="center"> <img alt="fourier_series-011.png" src="/r/img/556/fourier_series-011.png" /> </p> 
 
 First, let's not get confused between Fourier series and Fourier transforms. A Fourier series is the breakdown of a function defined on a finite interval into "frequency components." For example, if we have \\( f(x) : x \in [a, b] \\), a Fourier series for \\( f(x) \\) pulls apart the **discrete** frequency components of the \\( e^{ikx} \\) modes that make up the function. Starting with a fundamental mode \\( f_0 \\), a first harmonic \\( f_1 \\), a second harmonic \\( f_2 \\), and so on and so forth. We won't end up with any energy in the frequencies between those modes, since it's a discrete series.
 
@@ -119,9 +121,9 @@ We get the weighting coefficients \\( a_n \\) by taking the inner product of eac
 
 The completeness property of S-L gives families of orthogonal functions for any particular differential equation. The family we get ends up being a natural basis for physical situations.
 
-Some household examples of S-L systems:
+Consider the Sturm-Liouville system:
 
-- \\( u'' - \lambda ^2 u = 0, [ -L / 2, L / 2] \\)
+- \\( u^{\prime \prime} - \lambda ^2 u = 0 \\) over the domain \\( u \in [ -L / 2, L / 2] \\)
 
 We've got \\( w(x) = 1 \\) and inner product \\( \langle X_n | X_m \rangle = \int _{-L/2} ^{L/2} X_n X_m \dd x \\)
 
@@ -138,7 +140,7 @@ There are other systems, like the Chebyshev, Hermite, and Laguerre polynomials. 
 
 Back to Fourier series, let's get the Fourier theorem:
 
-**Theorem**: Any periodic function can be decomposed into a potentially infinite series of sine and cosine functions. If period is \\( L \\) (\\( f(x + L) = f(x) \\)) then
+**Theorem**: Any periodic function can be decomposed into a potentially infinite series of sine and cosine functions. If period is \\( L \\), that is (\\( f(x + L) = f(x) \\)), then
 
 {{< katex display >}}
 f(x) = \frac{a_0}{2} + \sum _{n=1} ^{\infty} a_n \cos (k_n x) + b_n \sin (k_n x)
@@ -159,11 +161,10 @@ a_n = \frac{2}{L} \int_0 ^L f(x) \cos (k_n x) \dd x
 b_n = \frac{2}{L} \int_0 ^L f(x) \sin (k_n x) \dd x
 {{< /katex >}}
 
-The set of coefficients \\( a_n, b_n \\) forms the spectrum of \\( f(x) \\).
+The set of coefficients \\( a_n, b_n \\) forms the spectrum of \\( f(x) \\). For the Fourier series to be convergent, the spectrum must decay sufficiently quickly, so we'll see the coefficients getting smaller as \\( n \rightarrow \infty \\).
 
-For the Fourier series to be convergent, the spectrum must decay sufficiently quickly, so we'll see the coefficients getting smaller as \\( n \rightarrow \infty \\).
+We usually express the Fourier series using the more convenient complex form by making use of the Euler identity \\( e^{i k x} = \cos (kx) + i \sin (kx) \\)
 
-The more convenient complex form using the Euler identity
 {{< katex display >}}
 f(x) = \sum_{n = -\infty} ^{\infty} c_n e^{i k_n x}
 {{< /katex >}}
@@ -181,25 +182,44 @@ You can show that they are related to the previous ones by
 
 Let's build some intuition by looking into some examples of Fourier spectra.
 
-**Finite spectra**
+## Series with finite spectra
 
-- Simple waveform \\( u = \sin (5x) \\). By inspection, 
+
+{{< hint info >}}
+
+**Simple Waveform**
+
+{{< katex display >}}
+u = \sin (5x)
+{{< /katex >}}
+
+By inspection, 
+
 {{< katex display >}}
 \sin (5x) = \frac{1}{2i} \left( e^{i 5x} - e ^{-i 5 x} \right)
 {{< /katex >}}
+
 That was easy, that's the whole series. There are only two Fourier coefficients
+
 {{< katex display >}}
 c_5 = - \frac{i}{2} \qquad c_{-5} = \frac{i}{2}
 {{< /katex >}}
 
-- Beat wave
+{{< /hint >}}
+
+
+{{< hint info >}}
+
+**Beat wave**
+
 {{< katex display >}}
 u = \cos (6x) \cos (x)
 {{< /katex >}}
 
 Expanding each of the cosines as complex exponentials
+
 {{< katex display >}}
-= \frac{1}{4} \left( e^{i 6 x} + e^{- i 6 x} \right) (e^{ix} + e^{-ix})
+u = \frac{1}{4} \left( e^{i 6 x} + e^{- i 6 x} \right) (e^{ix} + e^{-ix})
 {{< /katex >}}
 {{< katex display >}}
 = \frac{1}{4} \left( e^{i 7 x} + e^{-i 7 x} + e^{i 5 x} + e^{-i 5 x} \right)
@@ -207,14 +227,21 @@ Expanding each of the cosines as complex exponentials
 {{< katex display >}}
 = \frac{1}{2} \left( \cos (7x) + \cos (5x) \right)
 {{< /katex >}}
+
 So we've got four coefficients
+
 {{< katex display >}}
 c_{\pm 5} = \frac{1}{4}, \qquad c_{\pm 7} = \frac{1}{4}
 {{< /katex >}}
 
-**Infinite Spectrum**
+{{< /hint >}}
 
-- Square wave
+### Fourier series with infinite spectra
+
+
+{{< hint info >}}
+
+**Square Wave**
 
 {{< katex display >}}
 f(x) = \begin{cases} 1 & \qquad & 0 < x < T/2 \\
@@ -232,15 +259,30 @@ f(x) = \sum_{n = \text{odd}} \frac{-i}{\pi n} e^{i k_n x}
 {{< /katex >}}
 The series has a slow convergence, and if you plot the spectrum you get a power law relationship.
 
-- Triangle Wave
+
+{{< /hint >}}
+
+
+{{< hint info >}}
+
+**Triangle Wave**
+
 
 The points of the triangle wave where the function is continuous but not differentiable give us a similarly slow convergence of the Fourier spectrum. For a triangle wave it ends up that
+
 {{< katex display >}}
 | c_n| \sim \frac{1}{n^2}
 {{< /katex >}}
+
 so they converge an order faster than a square wave, but still very slowly.
 
-- Elliptic cosine
+{{< /hint >}}
+
+
+{{< hint info >}}
+
+**Elliptic Cosine**
+
 
 Sort of like a cosine, except that it's defined on an ellipse instead of a circle. We give it some parameter \\( m \\) that relates to the ellipticity
 
@@ -253,7 +295,11 @@ It's periodic, continuous, and infinitely differentiable _but_ its Fourier coeff
 {{< katex display >}}
 |c_n | \sim \text{sech}(b_n (1 + 2n)) \sim e^{-n}
 {{< /katex >}}
+
 so the spectrum converges _fast_.
+
+{{< /hint >}}
+
 
 To summarize, functions with discontinuities and non-differentiable points had Fourier coefficients that decay with a power law. Continuous, differentiable functions converge very fast. A general conclusion is that non-differentiable functions (or functions that are non-smooth at some level) have infinite power law spectra.
 
@@ -308,24 +354,45 @@ The inverse Laplace integral is an integral over the complex plane. The factor \
 
 Representative of the most important features of the Fourier Transform:
 
-- Gaussian: 
+
+{{< hint info >}}
+
+**Gaussian**
+
 {{< katex display >}}
 f(x) = e^{- \alpha x ^2} \qquad \hat {f} (k) = \frac{1}{\sqrt{2 \alpha}} e ^{- k ^2 / 4 \alpha}
 {{< /katex >}}
 
 Note that if \\( \alpha = 1/2 \\), it is its own transform pair. The Gaussian is one of the only eigenfunctions of the Fourier transform.
 
-- Derivative
+{{< /hint >}}
+
+
+
+{{< hint info >}}
+**Derivative**
+
 {{< katex display >}}
-\dv{^n f}{x^n} \quad \leftrightarrow \quad (i k) ^n \hat{f}(k)
+\pdv{^nf}{x^n} \quad \leftrightarrow \quad (i k) ^n \hat{f}(k)
 {{< /katex >}}
 
 In this way, linear differential equations become simple algebraic equations in their Fourier transformed form.
 
-- Wave
+
+{{< /hint >}}
+
+
+{{< hint info >}}
+**Wave**
+
+The Fourier transform of a single wave component is the Dirac delta function
+
 {{< katex display >}}
 f(x) = e^{i k_0 x} \qquad \hat{f}(k) = \sqrt{2 \pi} \delta (k - k_0)
 {{< /katex >}}
+
+
+{{< /hint >}}
 
 ### Unitary Fourier Transform
 
@@ -390,21 +457,18 @@ So there is a symbolic correspondence between \\( \grad \\) and \\( i \vec k \\)
 - The time part satisfies
   - \\( \pdv {^n f}{t^n} \rightarrow (- i \omega)^n \hat f\\)
 
-So:
-{{< katex display >}}
-(\vec x, t) \leftrightarrow (\vec k, \omega)
-{{< /katex >}}
-{{< katex display >}}
-\grad \leftrightarrow i \vec k
-{{< /katex >}}
-{{< katex display >}}
-\pdv{}{t} \leftrightarrow -i \omega
-{{< /katex >}}
+Writing out all of the correspondences,
+
+| Space-time domain | Fourier domain |
+| --- | --- |
+| \\( (\vec x, t) \\) | \\( (\vec k, \omega) \\) |
+| \\( \grad \\) | \\( i \vec k \\) |
+| \\( \pdv{}{t} \\) | \\( -i \omega \\) |
 
 PDE's in space and time become algebraic equations that can be much more easily solved in the Fourier domain.
 
 
-## Summary
+## Putting it all together
 
 To summarize, we solve linear differential equations on the finite interval of the form
 
@@ -482,7 +546,7 @@ T_n ' = - c T_n \lambda _n \rightarrow T_n = - i c k_n T_n
 \rightarrow T_n = B e^{- i c k_n t}
 {{< /katex >}}
 {{< katex display >}}
-u(x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i k_n (x - ct}
+u(x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i k_n (x - ct)}
 {{< /katex >}}
 The initial condition can just be written as a Fourier series, since the time component at \\( t= 0 \\) is just \\( 1 \\)
 {{< katex display >}}
@@ -516,7 +580,7 @@ which is exactly the Fourier integral of the initial condition.
 \rightarrow u (x, t) = \sum_{n = - \infty} ^{\infty} c_n e^{i (k_n x - k_n c t)}
 {{< /katex >}}
 
-Recall the symbolic correspondence \\( (\vec x, t) \leftrightarrow (\vec k, \omega) \\), \\( i \vec k \leftrightarrow \grad \\), and \\( - i \omega \leftrightarrow \pdv{}{t} \\). Applying these to the advection equation,
+Recall the symbolic correspondence \\( (\vec k, \omega) \leftrightarrow (\vec x, t)  \\), \\( i \vec k \leftrightarrow \grad \\), and \\( - i \omega \leftrightarrow \pdv{}{t} \\). Applying these to the advection equation,
 
 {{< katex display >}}
 \partial _t u + c \partial _x u = 0 \leftrightarrow - i \omega \hat u + i k c \hat u = 0
@@ -544,24 +608,26 @@ u(x, t) = \int _{-\infty} ^{\infty} A(k) e^{i k x - \omega(k) t} \dd k
 {{< /katex >}}
 where \\( A(k) \\) are the spectral coefficients of the initial condition (not the linear operator). This is the general solution to linear evolution equations.
 
+## Dispersion Relation
+
 The **dispersion relation** \\( \omega = \omega(k) \\) is a functional relation between the time and space frequencies and is a consequence of the physical situation. You can think of it as a signature consequence of the PDE or system of equations in question.
 
-### Properties of the Dispersion Relation
+Any homogeneous partial differential equation may be written in the form \\( A (\grad, \pdv{}{t}) \cdot \vec u = 0 \\) for a differential operator \\( A(\grad, \pdv{}{t}) \\). This is symbolically equivalent to a dispersion function \\( D(\omega, k) \cdot \hat u = 0 \\). Because the PDE describes the motion of \\( u \\), the solutions of the dispersion function also describe the motion.
 
-We can always write our PDE in the form \\( \psi (\grad, \pdv{}{t}) \cdot \vec u = 0 \\). This is symbolically equivalent to a dispersion function \\( D(\omega, k) \cdot \hat u = 0 \\). Because the PDE describes the motion of \\( u \\), the solutions of the dispersion function also describe the motion.
-
-- Phase velocity
+### Phase velocity
 
 Consider a single phase component or a single wave
+
 {{< katex display >}}
 e^{i (\vec k \cdot \vec x - \omega t)}
 {{< /katex >}}
+
 In 1-D, factor out the \\( k \\): \\( k (x - \frac{\omega}{k} t) \\). Along the line \\( x = \frac{\omega}{k}t \\), the phase is constant. The apparent velocity of a single phase component is
 {{< katex display >}}
 v_\phi = \frac{\omega}{k}
 {{< /katex >}}
 
-- Group velocity
+### Group velocity
 
 This is a bit more complicated, and first we'll need the concept of the principle of stationary phase.
 
@@ -643,7 +709,7 @@ This velocity is called the **group velocity**, because it describes the motion 
 
 For linear dispersion relations, the group velocity and the phase velocity are the same, but for more complicated functions they are not.
 
-- Growth/decay of modes and energy as a complex time frequency
+### Growth/decay of modes and energy as a complex time frequency
 
 Because \\( \omega \\) comes from the roots of some arbitrary dispersion function \\( D(\omega, k) = 0 \\), we know that \\( \omega \\) will be complex valued. We can split the frequency into its real and imaginary parts
 {{< katex display >}}
@@ -671,7 +737,9 @@ the amplitudes include the exponential \\( e^{\omega_i t} \\).
 
 Some variables are random, in some sense. They may take on a set of values with different probability. If \\( X \\) is a random variable, the set of probabilities assigned to each possible outcome of \\( X \\) is called its probability distribution.
 
-- Discrete distributions: \\( X \\) can take on finitely/countably many values.
+#### Discrete distributions
+
+In a discrete distribution, \\( X \\) can take on finitely/countably many values.
 
 Everyone loves the good old Binomial distribution: Suppose we conduct \\( n \\) independent experiments with a binary outcome of success or failure. Let the probability of success \\( P(S) = p \\), so the probability of failure \\( P(F) = 1 - p \\). How likely is it to have \\( k \\) successes in \\( n \\) trials?
 
@@ -683,7 +751,9 @@ where
 \begin{pmatrix} n \\ k \end{pmatrix} \equiv \frac{ n!}{k! (n-k)!}
 {{< /katex >}}
 
-- Continuous distributions: \\( X \\) can take on a continuous range of values.
+#### Continuous distributions
+
+In a continuous distribution \\( X \\) can take on a continuous range of values.
 
 When the random variable can take on a continuum of possible values (e.g. particle velocity), the distribution is a continuous function. Just integrate to get the probability that the value is within a range.
 
@@ -695,27 +765,44 @@ P(X = x) = f(x)
 
 We can define moments of the probability distribution, which are going to be _very_ important in kinetic theory and in probability theory (and in general).
 
-- 0th moment: "Normalization"
+
+{{< hint info >}}
+
+**0th moment: Normalization**
 
 Probability density functions are required to be normalized to 1. In the discrete case, this amounts to
+
 {{< katex display >}}
 \sum _{i} P(X = x_i) = 1
 {{< /katex >}}
+
 In the continuous case,
+
 {{< katex display >}}
 \int _{\Omega} f(x) \dd x = 1
 {{< /katex >}}
 
-- 1st moment: "Expected value" or weighted average.
+
+{{< /hint >}}
+
+
+{{< hint info >}}
+**1st moment: Expected value or weighted average**
 
 {{< katex display >}}
 \mathbf{E}[X] \equiv \sum_i x_i p_i
 {{< /katex >}}
+
 {{< katex display >}}
 \langle X \rangle = \sum_{\Omega} x f(x) \dd x
 {{< /katex >}}
 
-- 2nd moment: "Variance" (square of the standard deviation)
+{{< /hint >}}
+
+
+{{< hint info >}}
+
+**2nd moment: "Variance" (square of the standard deviation)**
 
 Describes the spread in the outcomes
 
@@ -726,11 +813,19 @@ Describes the spread in the outcomes
 \langle X^2 \rangle = \int x^2 f(x) \dd x
 {{< /katex >}}
 
-- General Nth moment:
+{{< /hint >}}
+
+
+{{< hint info >}}
+
+**General Nth moment:**
 
 {{< katex display >}}
 \langle X^n \rangle = \int x^n f(x) \dd x
 {{< /katex >}}
+
+{{< /hint >}}
+
 
 ### Law of Large Numbers
 
